unix: Make sure we signal EOF on the write side when disconnecting

Add a regression test.

PR:		294014
Reported by:	diizzy
Reviewed by:	glebius
MFC after:	1 week
Fixes:		5fefa3d115b1 ("unix: new implementation of unix/stream & unix/seqpacket")
Differential Revision:	https://reviews.freebsd.org/D56764